# tunnel

./: .gitignore  AUDIT_AND_PLAN.md  Cargo.toml  DEEP_AUDIT_CROSSPLAT_2026-06-29.md  README.md  SECURITY.md  deny.toml  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  cloudflared.rs  error.rs  fsutil.rs  main.rs  model.rs  name.rs  output.rs  port.rs  proc.rs  registry.rs  spawn.rs  state.rs  static_server.rs  worker.rs
src/cmd/: detail.rs  kill.rs  list.rs  logs.rs  mod.rs  open.rs  prune.rs  start.rs
