[package]
name = "freeoxide-tunnel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
directories = "6.0.0"
nix = { version = "0.31.3", features = ["process", "signal"] }
open = "5.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.4"
