[package]
name = "freeoxide-tunnel"
version = "0.1.0"
edition = "2024"
# Edition 2024 requires Rust 1.85. Pin the MSRV so a future toolchain or a
# dependency bump cannot silently raise the build floor without CI catching it.
rust-version = "1.85"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
directories = "6.0.0"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["process", "signal"] }
open = "5.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "timeout", "limit", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.4"

[dev-dependencies]
# Temp directories for StateDir/served-tree isolation in tests.
tempfile = "3"
# Property tests for safe_component / extract_url / validate_name.
proptest = "1"
# tokio test harness; "test-util" is not part of the "full" feature set.
tokio = { version = "1.52.3", features = ["test-util", "macros", "rt-multi-thread"] }
# Drive the Router directly in HTTP-layer tests (ServiceExt::oneshot).
tower = { version = "0.5", features = ["util"] }
# Read response bodies in tests.
http-body-util = "0.1"
http = "1"
