[package]
name = "freeoxide-tunnel"
version = "0.1.0"
edition = "2024"
# Edition 2024 needs Rust 1.85, but the locked dependency tree needs >=1.88:
# comfy-table 7.2.2 uses let-chains (stabilized in 1.88). Pin the MSRV so a
# future toolchain or dependency bump cannot silently raise the build floor
# without CI catching it.
rust-version = "1.88"
description = "Expose local and static services through temporary tunnels."
repository = "https://github.com/freeoxide/tunnel"
homepage = "https://tunnel.freeoxide.com"
license = "MIT"
readme = "README.md"
keywords = ["tunnel", "cloudflare", "cli", "static-server", "localhost"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ft"
path = "src/main.rs"

# cargo-binstall asset layout. The resulting archives are
# `freeoxide-tunnel-<target>.tgz` on Unix and `freeoxide-tunnel-<target>.zip` on
# Windows, each holding `ft` (or `ft.exe`) at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
# `clock` is deliberately OFF: it pulls `iana-time-zone`, which on macOS drags
# in `core-foundation-sys` and links the CoreFoundation *framework*. We only
# ever need a UTC "now" (never the local timezone), which we get from
# `SystemTime` via `model::now_utc` — see that helper. Keeping `clock` off lets
# the binary link under a cross-linker (zig) that lacks the Apple SDK
# frameworks, and trims a transitive dep from the macOS build.
chrono = { version = "0.4.45", default-features = false, features = ["serde", "std"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
directories = "6.0.0"
# Cross-platform advisory file locking for the registry: flock(2) on Unix and
# LockFileEx on Windows. Replaces the former raw libc::flock so the crate links
# on Windows (where libc::flock/AsRawFd do not exist) and keeps macOS off the
# fragile transitive-libc path.
fs2 = "0.4"
open = "5.3.5"
# Percent-decode the request path in the static-server confinement guard so our
# path resolution matches tower-http ServeDir's.
percent-encoding = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "timeout", "limit", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.4"

# nix is used on all Unix targets (setsid detach, kill(-pgid) teardown, signal
# handling) but is unavailable on Windows, so it is target-gated.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }

# libc is used for raw syscalls: Linux prctl(PR_SET_PDEATHSIG) in cloudflared,
# and macOS sysctl(KERN_PROCARGS2) for PID-reuse-safe process identity in proc.
# Gate each to its own platform so the others don't pull it in. (libc is already
# a transitive dependency of `nix` on Unix, so the macOS entry adds no new
# download in practice.)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"

# windows-sys (raw bindings, windows-only) backs the detached-worker feature:
# Job Objects for whole-tree teardown + the PR_SET_PDEATHSIG equivalent, and
# OpenProcess/QueryFullProcessImageName/TerminateProcess for PID identity and
# signalling. Gated to Windows so Unix builds stay free of it.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
# Temp directories for StateDir/served-tree isolation in tests.
tempfile = "3"
# Property tests for safe_component / extract_url / validate_name.
proptest = "1"
# tokio test harness; "test-util" is not part of the "full" feature set.
tokio = { version = "1.52.3", features = ["test-util", "macros", "rt-multi-thread"] }
# Drive the Router directly in HTTP-layer tests (ServiceExt::oneshot).
tower = { version = "0.5", features = ["util"] }
# Read response bodies in tests.
http-body-util = "0.1"
http = "1"
